test/typecheck/fail/issue853.sail

val foo : bitvector(32) -> unit

function foo(addr : bitvector(64)) -> unit = ()
